work a little on section 4 of the letter

--- a/recoltes-et-semailles/part-0-letter/3.md
+++ b/recoltes-et-semailles/part-0-letter/3.md
@@ -1,7 +1,7 @@
 ### 3. The boss is dead &mdash; abandoned building sites
 It is time, I feel, to give some explanations: why I quit so abruptly a world in which, apparently, I felt at ease for twenty years of my life; why I had the strange idea to come back (like a zombie...) when things had been going well without me these fifteen years; and finally why an introduction to a mathematical work of six or seven hundred pages ended up at twelve (or fourteen) hundred. And it is here also, when entering into the heart of the matter, that I will without doubt worry you (sorry!), even annoy you. For no doubt that, like me long ago, you want to see "in pink" the environment of which you are a part, where you have your place, your name and all that. I know what it is... And there, it will squeak a little...
 
-I talk here and there in Harvests and Sowings of the episode of my departure, without stopping too much. The "departure" there appears rather like an important caesura in my life as a mathematician &mdash; it is in relation to this "point" that the events of my life as a mathematician constantly situate themselves, as "before" and "after". A shock of great force was needed to tear myself away from an environment where I was strongly rooted, and from a "trajectory" which had been heavily drawn. The shock came from the confrontation, in an environment with which I was strongly identified, with a certain form of corruption<sup>85</sup>(*), from which I had until then chosen to look away (by simply abstaining from participating). With the retreat, I realized that beyond the event, there was however a very profound force at work in me. It was an intense _need for internal renewal_. Such a renewal couldn't be accomplished and pursued in the tepid ambiance of the scientific drying oven of a high standard institution. Behind me, twenty years of intense mathematical creativity and exaggerated mathematical commitment &mdash; and, at the same time, twenty long years of spiritual stagnation, in "isolation" [fr: vase clos]... Without realizing, I choked &mdash; it is the air of the open sea that I needed! My providential "departure" marked the sudden end of a long stagnation, and a first step toward an equilibration of profound forces in my being, folded and bolted in a state of intense disequilibrium, frozen... The departure was, truly, a _fresh start_ &mdash; the first step on a new voyage...
+I talk here and there in Harvests and Sowings of the episode of my departure, without stopping too much. The "departure" there appears rather like an important caesura in my life as a mathematician &mdash; it is in relation to this "point" that the events of my life as a mathematician constantly situate themselves, as "before" and "after". A shock of great force was needed to tear myself away from an environment where I was strongly rooted, and from a "trajectory" which had been heavily drawn. The shock came from the confrontation, in an environment with which I was strongly identified, with a certain form of corruption<sup>85</sup>(&ast;), from which I had until then chosen to look away (by simply abstaining from participating). With the retreat, I realized that beyond the event, there was however a very profound force at work in me. It was an intense _need for internal renewal_. Such a renewal couldn't be accomplished and pursued in the tepid ambiance of the scientific drying oven of a high standard institution. Behind me, twenty years of intense mathematical creativity and exaggerated mathematical commitment &mdash; and, at the same time, twenty long years of spiritual stagnation, in "isolation" [fr: vase clos]... Without realizing, I choked &mdash; it is the air of the open sea that I needed! My providential "departure" marked the sudden end of a long stagnation, and a first step toward an equilibration of profound forces in my being, folded and bolted in a state of intense disequilibrium, frozen... The departure was, truly, a _fresh start_ &mdash; the first step on a new voyage...
 
 Like I said, my mathematical passion was not put out, despite all this. It found expression in reflections which had remained sporadically, in ways very different from those that I had traced out "before". As for the _work_ that I left behind me, that "of before", as many published black on white as those, more essentially perhaps, that had still not found their way into writing or publication &mdash; it may well seem, and indeed it seems to me, that it was detached from me. Until last year, with Harvests and Sowings, the idea never occurred to me to "ask" as much as a little about the scattered echoes that had come back to me, here and there. I knew well that all that which I had done in math, and in particular, during my "geometric" period from 1955 to 1970, were things that _had_ to be done &mdash; and the things which I had seen or interviewed, were things that _had_ to appear, that _needed_ to be drawn into broad daylight. And also, that the work which I'd done, and that which I'd had made, was a job well done, a work into which I had put myself entirely. I put all my force and all my love there, and (it thus seems to me) it was now autonomous &mdash; a living and vigorous thing &mdash; which no longer needed me to mother it. In that respect, I left with perfect peace of mind. I had no doubts that these things written and non-written that I left behind, I left in good hands, which would know to look after that which they formed, that they would grow and multiply following their own nature of living and vigorous things.
 
@@ -9,7 +9,7 @@ During these fifteen years of intense mathematical work, had hatched, matured an
 
 This and that tool which I have shaped, is used here and there to "fracture" a problem reputed to be difficult, like one would force a safe. The tool is apparently solid. However, I know in it another "force" than that of a crowbar. It makes a part of a Whole, like a limb makes part of a body &mdash; a Whole from which it originates, which gives it its meaning and from which it draws force and life. You may use a bone (if it is big) to fracture a skull, everyone agrees on this. But this is not its true function, its reason for being. And I see these scattered tools which have been taken over one after the other, a bit like bones, carefully taken apart and cleaned, that they would have snatched from a body &mdash; from a living body which they would pretend to ignore...
 
-This which I say here in carefully weighed terms, at the end of a long reflection, had to be perceived by me little by little and in a diffuse fashion, over the years, at an unformulated level which still doesn't seek to take the form of a thought and conscious images, and clearly articulated utterances. I decided that this past, in the end, doesn't concern me. The echoes which reached me from afar, all filtered as they were, were however eloquent, for little as I stopped so slightly. I grew into a worker among others, busying himself with five or six "building sites"<sup>86</sup>(*) in full activity &mdash; a more experienced worker perhaps, an elder who not so long ago worked alone in these same sites, for long years, before a welcome responsibility came; an elder, may so be, but deep down not different from others. And now, this one gone, it is like an enterprise of masonry which would have declared bankruptcy, following the unexpected death of the employer: overnight, without speaking, the building sites would have been deserted. The "workers" left, each taking under their arm little odds and ends which they thought would find use by them. The cash register was divided, and there was no longer any reason henceforth to continue to wear oneself out at work...
+This which I say here in carefully weighed terms, at the end of a long reflection, had to be perceived by me little by little and in a diffuse fashion, over the years, at an unformulated level which still doesn't seek to take the form of a thought and conscious images, and clearly articulated utterances. I decided that this past, in the end, doesn't concern me. The echoes which reached me from afar, all filtered as they were, were however eloquent, for little as I stopped so slightly. I grew into a worker among others, busying himself with five or six "building sites"<sup>86</sup>(&ast;) in full activity &mdash; a more experienced worker perhaps, an elder who not so long ago worked alone in these same sites, for long years, before a welcome responsibility came; an elder, may so be, but deep down not different from others. And now, this one gone, it is like an enterprise of masonry which would have declared bankruptcy, following the unexpected death of the employer: overnight, without speaking, the building sites would have been deserted. The "workers" left, each taking under their arm little odds and ends which they thought would find use by them. The cash register was divided, and there was no longer any reason henceforth to continue to wear oneself out at work...
 
 There it is, again, a formulation which decanted itself by a reflection and an examination going on for over a year. But surely, it was a thing already perceived "somewhere", since the first years after my departure. Putting aside the works of Deligne on the absolute values of Frobenius eigenvalues (the "prestigious question", as I have recently understood it...) &mdash; when I sometimes run into one of my closest from days gone by, with whom I worked on the same sites, and that I ask them "and...?", it is alwys the same eloquent gesture, the arms in the air as if asking for mercy... Visibly, all were occupied on things more important than those which were dear to my heart &mdash; and visibly, also, while all busied themselves with occupied and important appearances, nothing big was being done. The essential had disappeared &mdash; a _unity_ which gave them meaning to partial tasks, and a _heat_ also, I believe. There remained a scattering of things detached from a whole, each in its corner brooding their little nest egg, or making it grow as best as it can.
 
@@ -19,6 +19,6 @@ I have not been able to hinder myself, once again, from following up with fully 
 
 ---
 
-<sup>85</sup>(*) Here it is about the unreserved collaboration, "establishment" at the top, of the set of scientists of all countries with military aircraft, as a convenient source of funding, of prestige and of power. This question is barely touched in passing, once or twice in Harvests and Sowings, for instance in the note "Le respect" of last April 2 ([n&deg; 179, pages 1221-1223](../table-of-contents.md#le-respect)).
+<sup>85</sup>(&ast;) Here it is about the unreserved collaboration, "establishment" at the top, of the set of scientists of all countries with military aircraft, as a convenient source of funding, of prestige and of power. This question is barely touched in passing, once or twice in Harvests and Sowings, for instance in the note "Le respect" of last April 2 ([n&deg; 179, pages 1221-1223](../table-of-contents.md#le-respect)).
 
-<sup>86</sup>(*) I express myself on the subject of these deserted "building sites", and review them finally, in the series of notes "Les chantiers désolés" ([n&deg;s 176´ to 178](../table-of-contents.md#chantiers-desoles)), from three months ago. One year earlier, and before the discovery of the Burial, it was already discussed, in the first note where I resume contact with my work and on the fate which it has had, in the note "Mes orphelins" ([n&deg; 46](../table-of-contents.md#mes-orphelins)).
+<sup>86</sup>(&ast;) I express myself on the subject of these deserted "building sites", and review them finally, in the series of notes "Les chantiers désolés" ([n&deg;s 176´ to 178](../table-of-contents.md#chantiers-desoles)), from three months ago. One year earlier, and before the discovery of the Burial, it was already discussed, in the first note where I resume contact with my work and on the fate which it has had, in the note "Mes orphelins" ([n&deg; 46](../table-of-contents.md#mes-orphelins)).
