--- a/recoltes-et-semailles/part-0-letter/4.md
+++ b/recoltes-et-semailles/part-0-letter/4.md
@@ -1,6 +1,28 @@
 ### 4. A wind of the burial
-However, if I have liked to elude thoughout these years the diffuse perception of a large-scale Burial, this did not fail to obstinately remind my good memory, under other faces and less anodyne, than that of a simple disaffection for a work. I knew little by little, I can't really say how, that several notions which were part of the forgotten vision, didn't just fall into disuse, but had become, in a certain high society, object for a condescending disdain. Such was the case, notably, for the crucial unifying notion of topos, at the very heart of the new geometry &mdash; this same which furnishes the common geometric intuition for topology, and algebraic and arithmetic geometry &mdash; this also which allowed me to release as well the tool of étale and $\ell$-adic cohomology, as those master ideas (more or less forgotten since, it is true...) of crystalline cohomology. Indeed, it was even my name, over the years, which insidiously, mysteriously, became object for derision &mdash; like a synonym for infinitely muddy [...] (like those about the famous "toposes", precisely, or the "motives" at which you jam your ears and that no one has ever seen...), for hairsplitting at a length of a thousand pages, and for overabundant and gigantic chatter about that which, in any case, everyone knows already since forever and without waiting for it... [...] "among high-flying people making great company".
+However, if I have liked to evade thoughout these years the diffuse perception of a large-scale Burial, this did not fail to obstinately remind my good memory, under less harmless guises than that of a simple loss of interest for a work. I knew little by little, I can't really say how, that several notions which were part of the forgotten vision, didn't just fall into disuse, but had become, in a certain high society, the object of a condescending disdain. Such was the case, notably, for the crucial unifying notion of topos, at the very heart of the new geometry &mdash; this which furnishes the common geometric intuition for topology, algebraic and arithmetic geometry &mdash; this which also allowed me to bring out as well the tool of étale and $\ell$-adic cohomology, as those master ideas (more or less forgotten since, it is true...) of crystalline cohomology. Truth be told, it was even my name, over the years, which insidiously, mysteriously, became object for derision &mdash; like a synonym for infinitely muddy [...] (like those about the famous "toposes", precisely, or the "motives" at which you jam your ears and that no one has ever seen...), for hairsplitting at a length of a thousand pages, and for overabundant and gigantic chatter about that which, in any case, everyone knows already since forever and without waiting for it... A little in these tones, but muted, by indirect statements, with all the delicacy that is appropriate "among high-flying people making great company".
 
-In the course of the reflection pursued in Harvests and Sowings, I believe to have put my finger on profound forces in the work of various people, behind their airs of derision and condescension [...]
+In the course of the reflection pursued in Harvests and Sowings, I believe to have put my finger on profound forces at work in various people, behind these airs of derision and condescension in the face of a work whose scope, life and breath, escapes them. I have also discovered (except for the particular traits of my character that have failed my work and my destiny) the secret "catalyst" which incited these forces to manifest in this form of casual contempt in front of the eloquent signs of an intact creativity; the Grand Officiant at the Funeral, in short, at this Burial muffled by derision and contempt. A strange thing, it is also those, among all, who were the closest to me &mdash; also the only one who has assimilated a day<sup>[?]</sup> and endorsed a certain vision, full of life and of intense force. But I'm getting ahead of myself...
 
-Truth be told, these "bursts of discrete derision" which returned to me from here and there, didn't affect me overly. They remained in an anonymous form, even until three or four years ago. There I saw clearly a little uplifting sign of the times, but they didn't [...]
+Truth be told, these "bursts of discrete derision" which returned to me from here and there, didn't affect me overly. They remained in an anonymous form, up until three or four years ago. There I saw clearly a sign of rather grim times, but they didn't really affect me, and gave rise to no anguish or worries in me. One thing that on the other hand touched me very directly, were the signs of distancing from my person, that came to me from here and there on behalf of many of my old friends in the world of mathematics, friends to whom (notwithstanding my departure from a world which was common to us) I continued to feel connected by bonds of sympathy, in addition to those who created a common passion and a certain common past. Again, if I was saddened by it each time, I was hardly at a standstill, and the thought never occurred to me (for all that I can remember) to make a connection between these three sets of signs: the abandoned building sites (and the forgotten vision), the "wind of derision", and the distancing of many among those who were my friends. I have written to everyone of them, and I have not received a response from anyone. It was moreover not uncommon, any longer, that letters that I wrote to old friends or students, on things that I felt strongly about, remained without reponse. New times, new morals &mdash; what could I do about it? I have limited myself to refraining from writing to them again.<sup>[?]</sup> And yet (if you are one of them) this letter that I am writing, will make the exception &mdash; a word which is offered to you once more &mdash; it's up to you if you welcome it this time, or if you close up again...
+
+The first signs of a distancing of certain old friends with regard to my character go back, if I am not mistaken, to 1976. This is the year when yet another "series" of signs occurred, of which I have left to speak, before going back to Harvests and Sowings. To put it better, these two last series of signs appeared then together. At the moment of writing, it appears to me that they are actually inseparable, that they are deep down two aspects or "faces" of the same reality, erupting in this year into the field of personal experience. For the aspect of which I am going to speak right now, it is about a systematic "flat refusal" [fr: fin de non recevoir], discrete and unanswerable, reserved by an "unfailing consensus"<sup>87</sup>(&ast;) to those students-and-similar _after_ 1970 who, through their work, their style of work and their inspiration, clearly wore the mark of my influence. It is perhaps good that likewise at this occasion, for the first time, I perceived this "breath of discrete derision" which, [...], sought a certain _style_ and a certain _approach_ to mathematics &mdash; a style and a vision which (according to a consensus which had apparently already become universal by then in the mathematical establishment) _had no reason to be_.<sup>[?]<sup>
+
+Here again, was a thing clearly perceived at an unconscious level. It even finished, still this very year to impose itself on my conscious attention, after the same aberrant scenario (illustrating the impossibility of making public a visibly brilliant thesis) repeated itself five times in a row, with the burlesque obstinacy of a circus gag. When looking back now, I realize that a certain reality "beckoned me" then with a benevolent insistance, while I pretended to turn a deaf ear: "Hey, look [...], pay a little attention to what is happening just here under your nose, it concernes you of course...!!". I was shaken a little, I looked (for a moment), half bewildered and half distracted: "ah yes, good, a little strange, looks like we want [...]".
+
+This was so unbelievable, that I rushed to forget the gag, as much as the circus itself. The truth is that I wasn't lacking other interesting things to do. This did not prevent the circus from reminding my good memory in years still to come &mdash; no longer in the tone of jokes, but in that of a secret delight to humiliate, or that of a punch hurled right in the face; except that we are distinguished people and that the punch takes here equally distinguished forms, necessarily, but still very effective, left to the inventiveness of the distinguished people in question...
+
+The episode that I have felt as "a punch right in the face" (from someone else) situates itself in October 1981 <sup>88</sup>(&ast;). This time, and for the first time since managing the insistent signs of a new spirit, I reached &mdash; stronger no doubt than if it were me that it'd hit, instead of [...]. It was a little [...], and it was moreover a remarkably gifted mathematician, and one who had just done beautiful things &mdash; but that is a detail, after all. What's more than a detail, on the other hand, is that three of my students "from before" were then directly solidary with an act received by the person concerned (and not without reason) as a humiliation and an affront. Two other of my former students have already had the occasion to treat him with condescendence, like opulent people brushing off a guttersnipe<sup>89</sup>(&ast;&ast;). Elsewhere yet another student would follow suit three years later (and in the style of "punch right in the face" once again) &mdash; but this I still don't know for sure. What called out to me then was more than enough. It was as if my past as a mathematician, never examined, suddenly was taunting me with a hideous grin, in the figure of five among those who were my students, having become important characters, powerful and dismissive...
+
+This would have been the moment when ever to ask, to probe the meaning of that which called out to me suddenly with such violence. But some part of me had decided (without it ever having been said to exist...) that this past "from before" no longer concerned me deep down, that this was no place for me to dwell on; that if it seemed to call out to me now in a voice that I only recognized all too well &mdash; that of [...] contempt &mdash; there was certainly some misunderstanding. And still, I established anguish, during days or maybe weeks, without even taking note. (Only the [...]
+
+[...]
+
+---
+
+<sup>87</sup>(&ast;) This "unfailing consensus" was evoked sporadically here and there in Fatuité et Renouvellement, and ended up becoming the object of a detailed testimony and of a reflection in the following part, L'Enterrement (1), with the "Cortège X" or "Le Fourgon Funèbre", forming the "coffin notes" ([n&deg;s 93-96](../table-of-contents.md#fourgon-funebre)) and the note "Le Fossoyeur — ou la Congrégation toute entière". This one closes this part of Harvests and Sowings, and constitutes at the same time a first culmination of the "second breath" of the reflection.
+
+<sup>88</sup>(&ast;) This episode is recounted in the note "Cercueil 3 — ou les jacobiennes un peu trop relatives" ([n&deg; 95](../table-of-contents.md#jacobiennes)), notably pages [404](../part-2-bury/3.md#page-404)-[406](../part-2-bury/3.md#page-406).
+
+<sup>89</sup>(&ast;&ast;) This is discussed in passing, in the note cited in the preceeding footnote.
+
+<sup>90</sup>(&ast;)
