--- a/recoltes-et-semailles/part-0-letter/6.md
+++ b/recoltes-et-semailles/part-0-letter/6.md
@@ -14,16 +14,16 @@ For the record, it would seem that the repression of the knowledge of this aspec
 
 This comparison may seem excessive, and maybe it actually is, if I apply it to [...]
 
-There has been (to use an expression of C. L. Siegel<sup>98</sup>(*)) an extraordinary "flattening", a "shrinking" [...]
+There has been (to use an expression of C. L. Siegel<sup>98</sup>(&ast;)) an extraordinary "flattening", a "shrinking" [...]
 
 [...]
 
 ---
 
-<sup>95</sup>(*)
+<sup>95</sup>(&ast;)
 
-<sup>96</sup>(**)
+<sup>96</sup>(&ast;&ast;)
 
-<sup>97</sup>(***)
+<sup>97</sup>(&ast;&ast;&ast;)
 
-<sup>98</sup>(*)
+<sup>98</sup>(&ast;)
