--- a/recoltes-et-semailles/part-3-yinyang/6.md
+++ b/recoltes-et-semailles/part-3-yinyang/6.md
@@ -33,7 +33,7 @@ Certainly these features [...]
 [...]
 
 #### b. The beautiful stranger
-(November 6) Looking back just now at the notes of yesterday, I was able to assure myself that I had paid attention not to relapse into a certain confusion between the mathematical _work_, an activity with very strong and dominant yang, and "_the_ mathematics" [fr: **la** mathématique]. It is certainly not a coincidence if in French like in German, the word which designates it is of feminine gender, just like _"science"_ [fr: **la** science], which is more general, or the still wider term _"knowledge"_ [fr: **la** connaissance]<sup>600</sup>(*), or also _"substance"_ [fr: **la** substance]. By the mathematician in the proper sense of the word, I mean one who "makes mathematics" (like he "makes love"). There is in fact no ambiguity to the distribution of roles in his relation to mathematics, to the unknown substance thus that he meets, that [...]
+(November 6) Looking back just now at the notes of yesterday, I was able to assure myself that I had paid attention not to relapse into a certain confusion between the mathematical _work_, an activity with very strong and dominant yang, and "_the_ mathematics" [fr: **la** mathématique]. It is certainly not a coincidence if in French like in German, the word which designates it is of feminine gender, just like _"science"_ [fr: **la** science], which is more general, or the still wider term _"knowledge"_ [fr: **la** connaissance]<sup>600</sup>(&ast;), or also _"substance"_ [fr: **la** substance]. By the mathematician in the proper sense of the word, I mean one who "makes mathematics" (like he "makes love"). There is in fact no ambiguity to the distribution of roles in his relation to mathematics, to the unknown substance thus that he meets, that [...]
 
 I realized for the first time the profound identity between the impulse which drew me toward "the woman", and that which draws me toward "the mathematics", a few months before the encountering the verses of the Tao Te Ching which would 
 
