--- a/recoltes-et-semailles/part-4-dance/3.md
+++ b/recoltes-et-semailles/part-4-dance/3.md
@@ -5,20 +5,20 @@
 
 ---
 
-<sup>889</sup>(**)
+<sup>889</sup>(&ast;&ast;)
 
-<sup>890</sup>(*)
+<sup>890</sup>(&ast;)
 
-<sup>891</sup>(*)
+<sup>891</sup>(&ast;)
 
-<sup>892</sup>(*)
+<sup>892</sup>(&ast;)
 
-<sup>893</sup>(*)
+<sup>893</sup>(&ast;)
 
-<sup>894</sup>(**)
+<sup>894</sup>(&ast;&ast;)
 
-<sup>895</sup>(*)
+<sup>895</sup>(&ast;)
 
-<sup>896</sup>(*)
+<sup>896</sup>(&ast;)
 
-<sup>897</sup>(**)
+<sup>897</sup>(&ast;&ast;)
