--- a/recoltes-et-semailles/part-0-letter/5.md
+++ b/recoltes-et-semailles/part-0-letter/5.md
@@ -1,12 +1,12 @@
 ### 5. The voyage
-I believe that I've more or less finished the tour, there, of the context in which my "return to maths" and, one thing leading to another, the writing of Harvests and Sowings, is situated. It was late March of last year, in the very last section of Fatuité et Renouvellement ("Le poids d'un passé" ([n&deg; 50](../table-of-contents.md#poids-passe))), that I thought again to question myself about the reasons and about the meaning of this unexpected return. Of all the "reasons", the strongest of all was surely the impression, diffuse and imperious at the same time, that the strong and vigorous things, that I had grown long ago to entrust between loving hands &mdash; "it is in a tomb, [...]"<sup>91(*)</sup>
+I believe that I've more or less finished the tour, there, of the context in which my "return to maths" and, one thing leading to another, the writing of Harvests and Sowings, is situated. It was late March of last year, in the very last section of Fatuité et Renouvellement ("Le poids d'un passé" ([n&deg; 50](../table-of-contents.md#poids-passe))), that I thought again to question myself about the reasons and about the meaning of this unexpected return. Of all the "reasons", the strongest of all was surely the impression, diffuse and imperious at the same time, that the strong and vigorous things, that I had grown long ago to entrust between loving hands &mdash; "it is in a tomb, [...]"<sup>91(&ast;)</sup>
 
 ---
 
-<sup>91</sup>(*) Citation taken from the note "The melody at the tomb &mdash; or the self-importance" ([n&deg; 167](../part-4-dance/3.md)).
+<sup>91</sup>(&ast;) Citation taken from the note "The melody at the tomb &mdash; or the self-importance" ([n&deg; 167](../part-4-dance/3.md)).
 
-<sup>92</sup>(**)
+<sup>92</sup>(&ast;&ast;)
 
-<sup>93</sup>(*)
+<sup>93</sup>(&ast;)
 
-<sup>94</sup>(*)
+<sup>94</sup>(&ast;)
