work on section 4

--- a/recoltes-et-semailles/part-0-letter/4.md
+++ b/recoltes-et-semailles/part-0-letter/4.md
@@ -13,16 +13,20 @@ This was so unbelievable, that I rushed to forget the gag, as much as the circus
 
 The episode that I have felt as "a punch right in the face" (from someone else) situates itself in October 1981 <sup>88</sup>(&ast;). This time, and for the first time since managing the insistent signs of a new spirit, I reached &mdash; stronger no doubt than if it were me that it'd hit, instead of [...]. It was a little [...], and it was moreover a remarkably gifted mathematician, and one who had just done beautiful things &mdash; but that is a detail, after all. What's more than a detail, on the other hand, is that three of my students "from before" were then directly solidary with an act received by the person concerned (and not without reason) as a humiliation and an affront. Two other of my former students have already had the occasion to treat him with condescendence, like opulent people brushing off a guttersnipe<sup>89</sup>(&ast;&ast;). Elsewhere yet another student would follow suit three years later (and in the style of "punch right in the face" once again) &mdash; but this I still don't know for sure. What called out to me then was more than enough. It was as if my past as a mathematician, never examined, suddenly was taunting me with a hideous grin, in the figure of five among those who were my students, having become important characters, powerful and dismissive...
 
-This would have been the moment when ever to ask, to probe the meaning of that which called out to me suddenly with such violence. But some part of me had decided (without it ever having been said to exist...) that this past "from before" no longer concerned me deep down, that this was no place for me to dwell on; that if it seemed to call out to me now in a voice that I only recognized all too well &mdash; that of [...] contempt &mdash; there was certainly some misunderstanding. And still, I established anguish, during days or maybe weeks, without even taking note. (Only the [...]
+This would have been the moment when ever to ask, to probe the meaning of that which called out to me suddenly with such violence. But some part of me had decided (without it ever having been said to exist...) that this past "from before" no longer concerned me deep down, that this was no place for me to dwell on; that if it seemed to call out to me now in a voice that I only recognized all too well &mdash; that of [...] contempt &mdash; there was certainly some misunderstanding. And still, I established anguish, during days or maybe weeks, without even taking note. (It is only last year, with the writing of Harvests and Sowings which made me return to this episode, that I ended up becoming aware of this anguish, which was taken under control as soon as it appeared.) Instead of establishing it and probing the meaning of it, I got restless, I wrote to the right and left, "the letters that imposed themselves". The interested even took the pains to respond to me, evasive letters of course and ones that didn't enter into any substance at all. The waves ultimately calmed down, and all returned into order. I hardly had to rethink it, until last year. This time, however, it remained as an injury, or as a painful splinter, rather, that one avoids touching; a splinter that _maintains_ this wound which demands nothing else than to heal...
 
-[...]
+Here was, surely, the most painful and most difficult experience that I have experienced in my life as a mathematician &mdash; when it was given to me to see (without actually consenting to really _becoming aware_ of this which my eyes saw) "the same old student or companion that I liked, took pleasure to discretely crush another that I like and who recognizes me". It marked me stronger then, surely, than the nevertheless quite crazy discoveries that I made last year, and which (in a superficial regard) may seem [...]... It is true that this experience had brought into resonance many others, in the same but less violent tones, which on the spot [...].
+
+This reminds me, also, that the same year of 1981 was also that of a draconian turning point in my relation to the only one of my old students with whom I remained in regular contact after my departure, and who since fifteen years, had also figured as a "privileged interlocutor" for me, at a mathematical level. It was in effect the year in which "the signs of an affectation of disdain" that had been appearing for some years already<sup>90</sup>(&ast;) "suddenly became so brutal" that I then ceased all mathematical communication with him. This was a couple of months before the punching-episode described earlier. With hindsight the coincidence appears striking to me, but I don't think I made the slightest reconciliation at that time. It was stored in separate "lockers"; lockers which someone, moreover, had declared not to be of any consequence &mdash; the case had been heard!
+
+And this reminds me, too, that in the month of June still in the same year 1981, there had already taken place a certain brilliant _Symposium_ [fr: Colloque], memorable in more ways than one &mdash; a symposium which truly deserves to enter into History (or into what remains...) under the indelible name of the "Perverse Symposium". I made its aquaintance (or rather, it tumbled over me!) on May 2 last year, two weeks after the discovery (on April 19) of The Burial in the flesh &mdash; and I immediately understood that I had run into "the apotheosis". The apotheosis of a burial, certainly, but also, an _apotheosis of contempt_ of that which, since the more than two thousand years that our science has existed, has been the tacit and immutable basis for the ethics of mathematicians: know, this elementary rule, not to present as one's own the ideas and results taken from another. And in taking note of the the moment of this remarkable coincidence in time, between two events which may seem very different in nature and in scope, I am seized to see reveal itself here the deep and evident connection between the _respect for a person_, and that of elementary ethical rules of an art or of a science, which made it its exercise nothing but<sup>[?]</sup> a "free-for-all", and of the set of those which are known to excel and who set the tone, nothing but an unscrupulous "mafia". But I am getting ahead of myself again...<sup>[needs some coherence]</sup>
 
 ---
 
 <sup>87</sup>(&ast;) This "unfailing consensus" was evoked sporadically here and there in Fatuité et Renouvellement, and ended up becoming the object of a detailed testimony and of a reflection in the following part, L'Enterrement (1), with the "Cortège X" or "Le Fourgon Funèbre", forming the "coffin notes" ([n&deg;s 93-96](../table-of-contents.md#fourgon-funebre)) and the note "Le Fossoyeur — ou la Congrégation toute entière". This one closes this part of Harvests and Sowings, and constitutes at the same time a first culmination of the "second breath" of the reflection.
 
-<sup>88</sup>(&ast;) This episode is recounted in the note "Cercueil 3 — ou les jacobiennes un peu trop relatives" ([n&deg; 95](../table-of-contents.md#jacobiennes)), notably pages [404](../part-2-bury/3.md#page-404)-[406](../part-2-bury/3.md#page-406).
+<sup>88</sup>(&ast;) This episode is recounted in the note "Cercueil 3 — ou les jacobiennes un peu trop relatives" ([n&deg; 95](../table-of-contents.md#jacobiennes)), particularly pages [404](../part-2-bury/3.md#page-404)-[406](../part-2-bury/3.md#page-406).
 
 <sup>89</sup>(&ast;&ast;) This is discussed in passing, in the note cited in the preceeding footnote.
 
-<sup>90</sup>(&ast;)
+<sup>90</sup>(&ast;) This is discussed in the episode of the note "Deux tournants" ([n&deg; 66](../table-of-contents.md#deux-tournants)).
